--- a/apps/templates/patients/add_patient.html
+++ b/apps/templates/patients/add_patient.html
@@ -30,7 +30,7 @@
               </div>
             </div>
             <div class="card-body">
-              <p class="text-uppercase text-sm">פרטי המטופל</p>
+              <p class="text-uppercase text-sm">פרטי הדייר/ת</p>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group" >
