lipaz changes round 4

--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -3,8 +3,7 @@
       <div class="row align-items-center justify-content-lg-between">
         <div class="col-lg-6">
           <div class="copyright text-center text-sm text-muted text-lg-start">
-            &copy; <a href="https://www.creative-tim.com?AFFILIATE=128200" class="font-weight-bold" target="_blank">Creative Tim</a>
-            - Coded by Niv Badli & Tal Endelman
+            &copy; Coded and Designed by Niv Badli & Tal Endelman & Lipaz Amar
           </div>
         </div>
 {#        <div class="col-lg-6">#}
