--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" href="{{ config.ASSETS_ROOT }}/img/favicon.png">
 
   <title>
-    Flask Argon Dashboard - {% block title %}{% endblock %} | AppSeed
+    Flask Argon Dashaboard - {% block title %}{% endblock %} | AppSeed
   </title>
 
   <!--     Fonts and icons     -->
@@ -38,7 +38,6 @@
 </head>
 <body class="">
   
-  {% include "includes/navigation-auth.html" %}
 
   {% block content %}{% endblock content %}
 
