--- a/apps/templates/patients/patients_list.html
+++ b/apps/templates/patients/patients_list.html
@@ -92,7 +92,7 @@
                                             <div class="modal-dialog">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h4 class="modal-title">עריכת מטופל</h4>
+                                                        <h4 class="modal-title">עריכת דייר/ת</h4>
                                                         <button type="button" class="close"
                                                                 data-dismiss="modal"
                                                                 aria-label="Close">
@@ -139,7 +139,7 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary"
-                                                                data-dismiss="modal">Close
+                                                                data-dismiss="modal">סגירה
                                                         </button>
                                                     </div>
                                                 </div>
