--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -12,11 +12,11 @@
     <section>
       <div class="page-header min-vh-100">
         <div class="container" >
-          <div class="row">
+          <div class="row" >
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
-              <div class="card card-plain">
-                <div class="card-header pb-0 text-start">
-                  <h4 class="font-weight-bolder">התחברות למערכת</h4>
+              <div class="card card-plain" >
+                <div class="card-header pb-0 text-start" >
+                  <h4 class="font-weight-bolder" style="float:right">התחברות למערכת</h4>
                   <p class="mb-0">
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
@@ -24,18 +24,18 @@
                     {% endif %}                    
                   </p>
                 </div>
-                <div class="card-body">
+                <div class="card-body" >
 
-                  <form role="form" method="post" action="">
+                  <form role="form" method="post" action="" >
 
                     {{ form.hidden_tag() }}
-                    <div class="mb-3">
+                    <div class="mb-3" dir="rtl">
                       {{ form.username(placeholder="הזינו שם משתמש",class="form-control") }}
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3" dir="rtl">
                       {{ form.password(placeholder="הזינו סיסמה",class="form-control",type="password") }}
                     </div>
-                    <div class="form-check form-switch">
+                    <div class="form-check form-switch" style="float:right">
                       <input class="form-check-input" type="checkbox" id="rememberMe">
                       <label class="form-check-label" for="rememberMe">שמירת מחלקה וסיסמא</label>
                     </div>
@@ -45,20 +45,18 @@
                   </form>
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                  <p class="mb-4 text-sm mx-auto">
-                    עדיין לא נפתחה מחלקה?
-                    <br>
+                  <p class="mb-4 text-sm mx-auto" dir="rtl">עדיין לא נפתחה מחלקה?<br>
                       <a href="{{ url_for('authentication_blueprint.register') }}" class="text-primary text-gradient font-weight-bold">ליצירת מחלקה</a>
                   </p>
                 </div>
               </div>
             </div>
             <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 end-0 text-center justify-content-center flex-column">
-              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signin-ill.jpg');
+              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('{{ config.ASSETS_ROOT }}/img/robot-and-lady-scream.jpeg');
           background-size: cover;">
                 <span class="mask bg-gradient-primary opacity-6"></span>
-                <h4 class="mt-5 text-white font-weight-bolder position-relative">""</h4>
-                <p class="text-white position-relative">The more effortless the writing looks, the more effort the writer actually put into the process.</p>
+                <h4 class="mt-5 text-white font-weight-bolder position-relative"></h4>
+                <p class="text-white position-relative" dir="rtl">אנחנו נותנים את האפשרות לדיירי הבית לדבר עם בני משפחותיהם, בקלות, במהירות וללא מגע ידי אדם.</p>
               </div>
             </div>
           </div>
