--- a/apps/templates/home/new_profile.html
+++ b/apps/templates/home/new_profile.html
@@ -46,7 +46,7 @@
                 <li class="nav-item">
                   <a class="nav-link mb-0 px-0 py-1 active d-flex align-items-center justify-content-center"  href="#modal1" aria-selected="true">
                     <i class="ni ni-app"></i>
-                    <span class="ms-2" >פרטי מחלקה</span>
+                    <span class="ms-2" >הגדרות מחלקה</span>
                   </a>
                 </li>
                 <li class="nav-item">
@@ -81,7 +81,7 @@
                 <p class="mb-0">שעות פעילות המחלקה</p>
               </div>
                               <div class="d-flex" dir="rtl">
-              <button type="button" class="btn btn-success float-right" data-toggle="modal" data-target="#add_department_time">הוספת מסגרת זמן חדשה למחלקה
+              <button type="button" class="btn btn-success float-right" data-toggle="modal" data-target="#add_department_time">הוספת שעות פעילות למחלקה
               </button>
                               </div>
             </div>
@@ -138,7 +138,7 @@
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h4 class="modal-title">מחיקת מטופל</h4>
+                                                        <h4 class="modal-title">מחיקת שעות פעילות המחלקה</h4>
                                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
                                                         </button>
@@ -147,7 +147,7 @@
                                                     <div class="modal-body text-center">
                                                         <p class="text-lg mb-0">האם את\ה בטוח\ה שברצונך למחוק את
                                                             <span class="font-weight-bolder">{{ row[0] }} {{ row[1] }}</span>
-                                                            מחלונות הזמן הפנויים של המחלקה?
+                                                            משעות פעילות המחלקה?
                                                         </p>
                                                     </div>
                                                     <div class="modal-footer">
@@ -172,7 +172,7 @@
             <div class="modal-content">
 
                 <div class="modal-header">
-                    <h4 class="modal-title">הוספת שעון זמנים חדש למחלקה</h4>
+                    <h4 class="modal-title">הוספת שעות פעילות למחלקה</h4>
                 </div>
 
                 <div class="modal-body" id="add_department_time_body">
@@ -195,13 +195,13 @@
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-primary" type="submit">הוספת חלון זמן חדש דנדש</button>
+                            <button class="btn btn-primary" type="submit">הוספה</button>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">סגירה</button>
                 </div>
             </div>
         </div>
