--- a/apps/templates/home/page-403.html
+++ b/apps/templates/home/page-403.html
@@ -8,8 +8,8 @@
 {% block content %}
 
   <main class="main-content  mt-0">
-    <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" 
-         style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signup-cover.jpg'); background-position: top;">
+    <div class="page-header align-items-start min-vh-80 pt-5 pb-11 m-3 border-radius-lg"
+         style="background-image: url('{{ config.ASSETS_ROOT }}/img/robot-and-lady-scream.jpeg'); background-position: top;">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
@@ -17,8 +17,8 @@
             <h1 class="text-white mb-2 mt-5">
                 Error 403
             </h1>
-            <p class="text-lead text-white">
-                Something went wrong.
+            <p class="text-lead text-white" dir="rtl">
+                משהו השתבש - בעיות הרשאות.
             </p>
           </div>
         </div>
@@ -29,21 +29,21 @@
       <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
         <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
           <div class="card z-index-0">
-            <div class="card-header text-center pt-4">
+            <div class="card-header text-center pt-4" dir="rtl">
               <h5>
-                Access denied.
+                ניסיון גישה לא מאושר.
               </h5>
             </div>
             <div class="row px-xl-5 px-sm-4 px-3">
               <div class="mt-2 position-relative text-center">
-                <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">
-                  If the problem persists, please contact support.
+                <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3" dir="rtl">
+                  ניסית לגשת לדף הדורש הרשאות, נא לוודא שאתם מחוברים למערכת.
                 </p>
               </div>
             </div>
             <div class="card-body">
                 <div class="text-center">
-                  <a href="/" class="btn bg-gradient-dark w-100 my-4 mb-2">HOME</a>
+                  <a href="/" class="btn bg-gradient-dark w-100 my-4 mb-2">לחץ כאן כדי לחזור לדף ההתחברות</a>
                 </div>
             </div>
           </div>
