lipaz fixes number 5

--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -64,9 +64,9 @@
                   <div class="mb-3" dir="rtl">
                     {{ form.password(placeholder="הזינו סיסמה",class="form-control",type="password") }}
                   </div>
-                  <div class="form-check form-check-info text-start">
+                  <div class="form-check form-check-info text-start" style="float:right">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                    <label  class="form-check-label" for="flexCheckDefault">
+                    <label  class="form-check-label" for="flexCheckDefault" >
                       אני מסכימ/ה <a href="javascript:;" class="text-dark font-weight-bolder">לתנאי השימוש</a>
                     </label>
                   </div>
