--- a/apps/templates/events/calendar.html
+++ b/apps/templates/events/calendar.html
@@ -85,39 +85,38 @@
     </div><!--   /.content-wrapper -->
 
     <div id="add_new_event_modal"  class="modal fade" role="dialog" dir="rtl">
-        <div class="modal-dialog">
-            <div class="modal-content">
+        <div class="modal-dialog" >
+            <div class="modal-content" style="float:right">
 
                 <div class="modal-header">
                     <h4 class="modal-title">הוספת שיחה חדשה</h4>
                 </div>
 
-                <div class="modal-body" id="add_new_event_modal_body">
-                    <form method="POST"
-                          action="{{ url_for('events_blueprint.add_new_event_popup') }}">
-                        <div class="form-group">
+                <div class="modal-body" id="add_new_event_modal_body" style="float:right" dir="rtl">
+                    <form method="POST" action="{{ url_for('events_blueprint.add_new_event_popup') }}" >
+                        <div class="form-group text-right">
                             {{ add_new_event_form.patient.label(class="form-control-label") }}
                             {{ add_new_event_form.patient(class="form-control", id="patient_select_form") }}
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group text-right">
                             {{ add_new_event_form.contact.label(class="form-control-label") }}
                             {{ add_new_event_form.contact(class="form-control", id="contact_select_form") }}
                         </div>
 
 
-                        <div class="form-group">
+                        <div class="form-group text-right">
                             {{ add_new_event_form.day.label(class="form-control-label") }}
                             {{ add_new_event_form.day(class="form-control", id="days_select_form") }}
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group text-right" >
                             {{ add_new_event_form.time.label(class="form-control-label") }}
                             {{ add_new_event_form.time(class="form-control", id="times_select_form") }}
                         </div>
 
 
-                        <div class="form-group">
+                        <div class="form-group text-right">
                             <button class="btn btn-primary" type="submit">הוספת שיחה חדשה</button>
                         </div>
                     </form>
