--- a/apps/templates/home/new_profile.html
+++ b/apps/templates/home/new_profile.html
@@ -32,8 +32,9 @@
           </div>
           <div class="col-auto my-auto">
             <div class="h-100">
-              <h5 class="mb-1">
+              <h5 class="mb-1" dir="rtl">
                 מספר מחלקה
+                  {{ current_username }}
               </h5>
               <p class="mb-0 font-weight-bold text-sm">
                 [place holder]
@@ -45,22 +46,22 @@
               <ul class="nav nav-pills nav-fill p-1" role="tablist">
                 <li class="nav-item">
                   <a class="nav-link mb-0 px-0 py-1 active d-flex align-items-center justify-content-center"  href="#modal1" aria-selected="true">
-                    <i class="ni ni-app"></i>
+                    <i class="ni ni-settings-gear-65"></i>
                     <span class="ms-2" >הגדרות מחלקה</span>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " href="#modal2"  aria-selected="false">
-                    <i class="ni ni-email-83"></i>
-                    <span class="ms-2">פרטי משתמש</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center" href="#modal3" aria-selected="false">
-                    <i class="ni ni-settings-gear-65"></i>
-                    <span class="ms-2">הגדרות מערכת</span>
-                  </a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " href="#modal2"  aria-selected="false">-->
+<!--                    <i class="ni ni-email-83"></i>-->
+<!--                    <span class="ms-2">פרטי משתמש</span>-->
+<!--                  </a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center" href="#modal3" aria-selected="false">-->
+<!--                    <i class="ni ni-settings-gear-65"></i>-->
+<!--                    <span class="ms-2">הגדרות מערכת</span>-->
+<!--                  </a>-->
+<!--                </li>-->
               </ul>
             </div>
           </div>
@@ -211,24 +212,10 @@
 
                             </div>
                         </div>
-
               </div>
-
-
             </div>
           </div>
-
-          <div class="modal2" id="modal2">
-            <h1>Peleasesease</h1>
-          </div>
-
-
-
-
         </div>
-
-
-
       </div>
 
       {% include "includes/footer.html" %}
@@ -251,9 +238,6 @@ function myFunction(element_id) {
 function myFunction2() {
   document.getElementById("modal1").style.display = "block";
 };
-
-<!--window.onload = myFunction2;-->
-
 
 </script>
 {% endblock javascripts %}
