--- a/apps/templates/patients/patients_list.html
+++ b/apps/templates/patients/patients_list.html
@@ -204,7 +204,7 @@
                             I love ASPSnippets!
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">סגירה</button>
                         </div>
                     </div>
                 </div>
