--- a/apps/templates/patients/add_patient.html
+++ b/apps/templates/patients/add_patient.html
@@ -64,7 +64,7 @@
                 <div class="col-md-3">
                   <div class="form-group">
                       {{ form.department.label(class="form-control-label") }}
-                      {{ form.department(class="form-control" ,value=current_user.id) }}
+                      {{ form.department(class="form-control" ,value=current_user.username,disabled=True) }}
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -74,44 +74,7 @@
                   </div>
                 </div>
               </div>
-{#              <hr class="horizontal dark">#}
-{#              <p class="text-uppercase text-sm">Contact Information</p>#}
-{#              <div class="row">#}
-{#                <div class="col-md-12">#}
-{#                  <div class="form-group">#}
-{#                    <label for="example-text-input" class="form-control-label">Address</label>#}
-{#                    <input class="form-control" type="text" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">#}
-{#                  </div>#}
-{#                </div>#}
-{#                <div class="col-md-4">#}
-{#                  <div class="form-group">#}
-{#                    <label for="example-text-input" class="form-control-label">City</label>#}
-{#                    <input class="form-control" type="text" value="New York">#}
-{#                  </div>#}
-{#                </div>#}
-{#                <div class="col-md-4">#}
-{#                  <div class="form-group">#}
-{#                    <label for="example-text-input" class="form-control-label">Country</label>#}
-{#                    <input class="form-control" type="text" value="United States">#}
-{#                  </div>#}
-{#                </div>#}
-{#                <div class="col-md-4">#}
-{#                  <div class="form-group">#}
-{#                    <label for="example-text-input" class="form-control-label">Postal code</label>#}
-{#                    <input class="form-control" type="text" value="437300">#}
-{#                  </div>#}
-{#                </div>#}
-{#              </div>#}
-{#              <hr class="horizontal dark">#}
-{#              <p class="text-uppercase text-sm">About me</p>#}
-{#              <div class="row">#}
-{#                <div class="col-md-12">#}
-{#                  <div class="form-group">#}
-{#                    <label for="example-text-input" class="form-control-label">About me</label>#}
-{#                    <input class="form-control" type="text" value="A beautiful Dashboard for Bootstrap 5. It is Free and Open Source.">#}
-{#                  </div>#}
-{#                </div>#}
-{#              </div>#}
+
             </div>
           </div>
         </div>
