--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/sign-up.html">
+          <a class="nav-link " href="{{ url_for('authentication_blueprint.logout') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-collection text-info text-sm opacity-10"></i>
             </div>
