--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -58,7 +58,7 @@
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">פרופיל המחלקה</span>
+            <span class="nav-link-text me-1">הגדרות המחלקה</span>
           </a>
         </li>
         <li class="nav-item">
