fixed more hebrew stuff

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto" dir="rtl">עדיין לא נפתחה מחלקה?<br>
-                      <a href="{{ url_for('authentication_blueprint.register') }}" class="text-primary text-gradient font-weight-bold">ליצירת מחלקה</a>
+                      <a href="{{ url_for('authentication_blueprint.register') }}" class="text-primary text-gradient font-weight-bold">ליצירת מחלקה חדשה</a>
                   </p>
                 </div>
               </div>
