--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -74,7 +74,7 @@
                     <button type="submit" name="register" class="btn bg-gradient-dark w-100 my-4 mb-2">הרשמה</button>
                   </div>
                   <p class="text-sm mt-3 mb-0 text-center">
-                    המחלקה כבר רשומה? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-dark font-weight-bolder">לחץ כאן להתחברות</a>
+                    המחלקה כבר רשומה? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-dark font-weight-bolder">לחץ כאן להתחברות למערכת</a>
                   </p>
                 </form>
 
