add dashboard template and change index route

--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -46,7 +46,7 @@
               {% if success %}
 
                 <div class="text-center">
-                  <a href="{{ url_for('authentication_blueprint.login') }}" class="btn bg-gradient-dark w-100 my-4 mb-2">התחברות</a>
+                  <a href="{{ url_for('patients_blueprint.patient_list') }}" class="btn bg-gradient-dark w-100 my-4 mb-2">התחברות</a>
                 </div>
 
               {% else %}
