--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -29,7 +29,7 @@
                       $53,000
                     </h5>
                     <p class="mb-0">
-                      <span class="text-success text-sm font-weight-bolder">+55%</span>
+                      <span class="text-success text-sm font-weight-bolder"></span>
                       since yesterday
                     </p>
                   </div>
