--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -18,15 +18,6 @@
             <span class="nav-link-text me-1">דף הבית</span>
           </a>
         </li>
-{#          <li class="nav-item">#}
-{#          <a class="nav-link " href="/">#}
-{#              <a class="nav-link " href="{{ url_for('dash_blueprint.data') }}">#}
-{#            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">#}
-{#              <i class="ni ni-world-2 text-primary text-sm opacity-10"></i>#}
-{#            </div>#}
-{#            <span class="nav-link-text me-1">דף</span>#}
-{#          </a>#}
-{#        </li>#}
         <li class="nav-item">
           <a class="nav-link "href="{{ url_for('patients_blueprint.patients_list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
@@ -36,7 +27,7 @@
           </a>
         </li>
                   <li class="nav-item">
-          <a class="nav-link "href="">
+          <a class="nav-link "href="http://vmedu258.mtacloud.co.il:8501/">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-tv-2 text-warning text-sm opacity-10"></i>
             </div>
