disabled id patient_info

--- a/apps/templates/patients/patient_info.html
+++ b/apps/templates/patients/patient_info.html
@@ -107,7 +107,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     {{ patient_form.patient_id.label(class="form-control-label") }}
-                                                    {{ patient_form.patient_id(class="form-control" disabled=True,value=patient.patient_id) }}
+                                                    {{ patient_form.patient_id(class="form-control",disabled=True,value=patient.patient_id) }}
                                                 </div>
                                                 <div class="form-group">
                                                     {{ patient_form.bed.label(class="form-control-label") }}
